--- a/openstreetmap/SaigonOSM.html
+++ b/openstreetmap/SaigonOSM.html
@@ -11792,11 +11792,10 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="prompt input_prompt">In&nbsp;[65]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span></span><span class="n">path</span> <span class="o">=</span> <span class="s2">&quot;E:/Work/Education/Udacity Nanodegree/Pproj/P3 DW/OPSM/&quot;</span>
-<span class="n">Image</span><span class="p">(</span><span class="n">filename</span> <span class="o">=</span> <span class="n">path</span> <span class="o">+</span> <span class="s2">&quot;saigon.JPG&quot;</span><span class="p">)</span>
+<div class=" highlight hl-ipython2"><pre><span></span><span class="n">Image</span><span class="p">(</span><span class="n">filename</span> <span class="o">=</span> <span class="s2">&quot;saigon.JPG&quot;</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -11807,7 +11806,7 @@ div#notebook {
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[65]:</div>
 
 
 <div class="output_jpeg output_subarea output_execute_result">
@@ -13000,7 +12999,7 @@ FABRRRQAqHy51mQASKCFbAJAPUfoPypKKKACiiigAooooA//2Q==
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="prompt input_prompt">In&nbsp;[63]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="c1"># If you are running this locally, remember to change the path</span>
@@ -13050,7 +13049,7 @@ FABRRRQAqHy51mQASKCFbAJAPUfoPypKKKACiiigAooooA//2Q==
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="prompt input_prompt">In&nbsp;[64]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="c1"># If not none, convert the default string inputs to a specified type.</span>
